[project]
name = "masslib4search"
version = "0.1.0"
description = "A toolkit for building searchable mass spectrometry databases."
authors = [
    {name = "David Niteas",email = "david.ql.d@foxmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
